fixed wrong css selector to fix overflow-wrap in full theme's notes styling

--- a/static/style/themes/full/notes.css
+++ b/static/style/themes/full/notes.css
@@ -20,7 +20,8 @@ a{
     color: rgb(28, 28, 28);
     padding: 20px;
 }
-.note-div > div > h2{
+
+.note-div > div{
     overflow-wrap: anywhere;
 }
 
